syntax = "proto3";

option java_package = "ru.yandex.yp.client.pods";
option java_outer_classname = "PodApi";

package NInfra.NPodAgent.API;

import "yp/client/api/proto/data_model.proto";
import "yp/client/api/proto/dynamic_attributes.proto";
import "yp/client/api/proto/pod_agent.proto";
import "yp/client/api/proto/secrets.proto";

// messages used for node_agent <-> pod_agent communication

// NOTE: В будущем Pod-agent будет принимать только это сообщение, сейчас он все еще принимает TPodAgentSpec отдельно для обратной совместимости
// NOTE: Валидация - все alias секретов различны
message TPodAgentRequest {
    reserved 4, 6;

    // The following section of fields contains values obtained from pod spec/status.
    TPodAgentSpec spec = 1;
    TPodAgentResourceCacheSpec resource_cache_spec = 3;

    NYP.NClient.NApi.NProto.TPodSpec.TResourceRequests resource_requests = 7;

    // subnet with id=boxes_subnet will be used for delegating ip for each box
    repeated NYP.NClient.NApi.NProto.TPodStatus.TIP6SubnetAllocation ip6_subnet_allocations = 5;

    // Contains (raw, unencrypted) secrets to be injected into the pod.
    // These are obtained via TVM magic from secret descriptors provided in /pod/spec/secrets.
    repeated NYP.NClient.NApi.NProto.TSecret secrets = 2;

    // Contains dynamic attributes extracted from pod's metadata.
    NYP.NClient.NApi.NProto.TDynamicAttributes pod_dynamic_attributes = 8;
}

// Спека для получения расширенного debug состояния pod_agent
message TPodAgentDebugSpec {
    repeated string workload_ids = 1;
    repeated string layer_ids = 2;
    repeated string volume_ids = 3;
    repeated string box_ids = 4;
    repeated string static_resource_ids = 5;
}

// Расширенный debug status возвращаемый Pod-agent
message TPodAgentDebugStatus {
    // Состояние behavior tree для workloads в dot формате
    map<string, string> workload_tree_dots = 1;
    // Состояние behavior tree для layers в dot формате
    map<string, string> layer_tree_dots = 2;
    // Состояние behavior tree для volumes в dot формате
    map<string, string> volume_tree_dots = 3;
    // Состояние behavior tree для boxes в dot формате
    map<string, string> box_tree_dots = 4;
    // Состояние behavior tree для layers в dot формате
    map<string, string> static_resources_tree_dots = 5;
}

